update aatn app

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>"AATN"</title>
+    <meta charset="UTF-8">
+    <title>AATN</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
-    <h1>Displaying an Image</h1>
+    <h1>An Appeal to Nature</h1>
     <img src="{{ url_for('static', filename='AATN.jpeg') }}" alt="Description">
+    <br>
+    <form action="greet" method="post">
+        {% for message in get_flashed_messages() %}
+                <p>{{ message }}</p>
+            {% endfor %}
+        <br>
+        <input type="text" name="name_input">
+        <br>
+        <input type="submit" value="GREET" id="greet">
+    </form>
 </body>
 </html>
